Mut4All/bug-labels/rust/A-save-analysis/69409.txt
Issue Title:
ICE -Zsave-analysis: ./ui/assign-to-method.rs · Issue #69409 · rust-lang/rust · GitHub

Rust Code:
struct Cat {
  meows : usize,

  how_hungry : isize,
}

impl Cat {
    pub fn speak(&self) { self.meows += 1; }
}

fn cat(in_x : usize, in_y : isize) -> Cat {
    Cat {
        meows: in_x,
        how_hungry: in_y
    }
}

fn main() {
  let nyan : Cat = cat(52, 99);
  nyan.speak = || println!("meow"); //~ ERROR attempted to take value of method
  nyan.speak += || println!("meow"); //~ ERROR attempted to take value of method
}

Bug Trace:
error[E0615]: attempted to take value of method `speak` on type `Cat`
  --> ./ui/assign-to-method.rs:20:8
   |
20 |   nyan.speak = || println!("meow"); //~ ERROR attempted to take value of method
   |        ^^^^^
   |
   = help: methods are immutable and cannot be assigned to

error[E0615]: attempted to take value of method `speak` on type `Cat`
  --> ./ui/assign-to-method.rs:21:8
   |
21 |   nyan.speak += || println!("meow"); //~ ERROR attempted to take value of method
   |        ^^^^^
   |
   = help: methods are immutable and cannot be assigned to

thread 'rustc' panicked at 'called `Option::unwrap()` on a `None` value', src/librustc_save_analysis/lib.rs:535:37
stack backtrace:
   0: backtrace::backtrace::libunwind::trace
             at /cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-0.3.44/src/backtrace/libunwind.rs:86
   1: backtrace::backtrace::trace_unsynchronized
             at /cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-0.3.44/src/backtrace/mod.rs:66
   2: std::sys_common::backtrace::_print_fmt
             at src/libstd/sys_common/backtrace.rs:78
   3: <std::sys_common::backtrace::_print::DisplayBacktrace as core::fmt::Display>::fmt
             at src/libstd/sys_common/backtrace.rs:59
   4: core::fmt::write
             at src/libcore/fmt/mod.rs:1052
   5: std::io::Write::write_fmt
             at src/libstd/io/mod.rs:1428
   6: std::sys_common::backtrace::_print
             at src/libstd/sys_common/backtrace.rs:62
   7: std::sys_common::backtrace::print
             at src/libstd/sys_common/backtrace.rs:49
   8: std::panicking::default_hook::{{closure}}
             at src/libstd/panicking.rs:204
   9: std::panicking::default_hook
             at src/libstd/panicking.rs:224
  10: rustc_driver::report_ice
  11: std::panicking::rust_panic_with_hook
             at src/libstd/panicking.rs:474
  12: rust_begin_unwind
             at src/libstd/panicking.rs:378
  13: core::panicking::panic_fmt
             at src/libcore/panicking.rs:85
  14: core::panicking::panic
             at src/libcore/panicking.rs:52
  15: rustc_save_analysis::SaveContext::get_expr_data
  16: <rustc_save_analysis::dump_visitor::DumpVisitor as syntax::visit::Visitor>::visit_expr
  17: syntax::visit::walk_expr
  18: <rustc_save_analysis::dump_visitor::DumpVisitor as syntax::visit::Visitor>::visit_item
  19: <rustc_save_analysis::dump_visitor::DumpVisitor as syntax::visit::Visitor>::visit_mod
  20: rustc::dep_graph::graph::DepGraph::with_ignore
  21: rustc_session::utils::<impl rustc_session::session::Session>::time
  22: rustc::ty::context::tls::enter_global
  23: rustc_interface::interface::run_compiler_in_existing_thread_pool
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/blob/master/CONTRIBUTING.md#bug-reports

note: rustc 1.43.0-nightly (436494b8f 2020-02-22) running on x86_64-unknown-linux-gnu

note: compiler flags: -Z save-analysis

query stack during panic:
end of query stack
error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0615`.

Bug Labels:
A-save-analysis, C-bug, I-ICE, T-compiler
